feat: Add file 02-caching

--- a/01-LangchainBasico.ipynb
+++ b/01-LangchainBasico.ipynb
@@ -74,14 +74,14 @@
     }
    ],
    "source": [
-    "openai = ChatGroq(model_name='llama3-8b-8192')\n",
+    "groq = ChatGroq(model_name='llama3-8b-8192')\n",
     "frequency_penalty=1\n",
     "presence_penalty = 1\n",
     "temperature =  1\n",
     "max_tokens=500\n",
     "n = 1\n",
     "seed = 123\n",
-    "response = openai.invoke(input='Quem foi Carl Sagan?', temperature=temperature,\n",
+    "response = groq.invoke(input='Quem foi Carl Sagan?', temperature=temperature,\n",
     "                    frequency_penalty=frequency_penalty,presence_penalty=presence_penalty,\n",
     "                    max_tokens=max_tokens,n=n, seed=seed)\n",
     "print(response)"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -107,12 +107,12 @@
     }
    ],
    "source": [
-    "openai = ChatGroq(model_name='llama3-8b-8192')\n",
+    "groq = ChatGroq(model_name='llama3-8b-8192')\n",
     "messages = [\n",
     "    {\"role\": \"system\", \"content\": \"Você é um assistente que fornece informações sobre figuras históricas.\"},\n",
     "    {\"role\": \"user\", \"content\": \"Quem foi Carl Sagan?\"}\n",
     "]\n",
-    "response = openai.invoke(messages)\n",
+    "response = groq.invoke(messages)\n",
     "print(response)"
    ]
   },
