--- a/01-LangchainBasico.ipynb
+++ b/01-LangchainBasico.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "editable": true,
     "id": "2ytPLsuJfx1d",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='Carl Sagan (1934-1996) foi um astrónomo, cientista, escritor e popularizador da ciência estadunidense. Ele foi um dos jornalistas científicos mais bem conhecidos e influentes do século 20, e sua obra legou um legado importante na advocacy da ciência e na compreensão do séquito da humanidade.\\n\\nCarl Sagan nasceu na cidade de Brooklyn, Nova York, Estados Unidos. Ele recebeu um Bachelor in Science em física e astronomia pela Universidade de Chicago, e um Ph.D. em astroético pela rin de Ciências, também da Universidade de Chicago.\\n\\nSagan foi um prolífico academia e cientista, com uma ampla gama de interesses e contribuições na área da astrofísica, eó e meteorologia, além de ciência e filosofia. Ele fez contribuições importantes para a compreensão dos fenômenos naturais, incluindo os fogos de estandes de cometaines e eólicas.\\n\\nSagan também foi um grande comunicador da ciência, e seu objetivo era tornar a ciência acessível e entendida para o público em geral. Ele pensava que a ciência era e deve ser um processo de colaboração entre professores, jornalistas, artistas e pessoas comuns e, portanto, acreditava que era importante se comprometer à precisa e interessante compartilhar da ciência com o público.\\n\\nCarl Sagan é remembered por sua habilidade para racionalizar e interpretar complexos conceitos e fenômenos em linguagem acessível, o que o fez um dos communicadores da ciência mais influentes da historia. Além disso, seu escrita foi sempre bem-sucedida em inspirar curiosidade e amor pela ciência e pela historia da humanidade.\\n\\nAlguns dos seus livros mais famosos incluem:\\n\\n* Possibilidade de outra terram\\n* Como saberemos\\n* Cosmos\\n* Pale blue dot\\n* Borboleta impressão\\n\\nSagan também foi o corruço do seriado de televisão inspirado em seu livro \"Cosmos\", que foi inspirado na sua serie de estrutura da serie de estrutura o da série de la série de televisão, que foi emitida pela primeira vez em 1980 e alcançou uma' additional_kwargs={} response_metadata={'token_usage': {'completion_tokens': 500, 'prompt_tokens': 17, 'total_tokens': 517, 'completion_time': 0.539919274, 'prompt_time': 0.002788453, 'queue_time': 0.145469261, 'total_time': 0.542707727}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_c0b3855449', 'service_tier': 'on_demand', 'finish_reason': 'length', 'logprobs': None} id='run--3c2e702c-7f88-402a-83c4-75a912fea24d-0' usage_metadata={'input_tokens': 17, 'output_tokens': 500, 'total_tokens': 517}\n"
+      "content='Carl Sagan (1934-1996) foi um astrônomo, astrobiólogo e divulgador científico norte-americano. Ele é conhecido por suas contribuições significativas para o campo da astrobiologia e pela forma como apresentou a ciência para o público em geral através de suas obras escritas e televisivas.\\n\\nSagan nasceu em Brooklyn, Nova York, e cresceu em Long Island. Ele se formou em física e astronomia na Universidade Cornell, onde também obteve seu doutorado em 1960. Sagan se tornou professor da Universidade de Cornell e passou a maior parte de sua carreira lá.\\n\\nSagan fez contribuições importantes para o campo da astrobiologia, estudando a possibilidade de vida extraterrestre e o impacto que a descoberta de vida em outros planetas teria sobre a humanidade. Ele também foi um defensor da busca pela vida em Marte e foi membro da equipe do projeto Viking, que enviou sondas para Marte nos anos 1970.\\n\\nSagan é mais conhecido por sua série de televisão \"Cosmos: A Personal Voyage\", que foi transmitida pela primeira vez em 1980 e teve grande audiência e impacto. A série apresentou conceitos complexos da astronomia, física e biologia de forma acessível e interessante para um público amplo. A série também abordou temas como a criação do universo, a evolução do homem e a busca pela vida extraterrestre.\\n\\nAlém de sua televisão e suas pesquisas, Sagan foi um autor prolífico e escreveu vários livros sobre ciência, incluindo \"The Cosmic Connection\" e \"Contact\", que foi adaptado para o cinema em 1997. Sagan também foi um activista em defesa da ciência e da liberdade de expressão e foi membro da Academia Nacional de Ciências dos Estados Unidos.\\n\\nCarl Sagan é considerado um dos maiores divulgadores científicos da história e seus trabalhos continuam a inspirar gerações de cientistas e amantes da ciência até hoje.' additional_kwargs={} response_metadata={'token_usage': {'completion_tokens': 465, 'prompt_tokens': 17, 'total_tokens': 482, 'completion_time': 0.583181223, 'prompt_time': 0.003286892, 'queue_time': 0.145232561, 'total_time': 0.586468115}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_343314801a', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None} id='run--63291f4d-a03c-41bd-98ba-38015f178086-0' usage_metadata={'input_tokens': 17, 'output_tokens': 465, 'total_tokens': 482}\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -102,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='Um homem incrível! Carl Sagan foi um astrónomo, astrofísico, cosmologista e escritor americano, nascido em 1934 e falecido em 1996. Ele é mais conhecido por ser um dos científicos mais populares e influentes da história, e por sua capacidade de transmitir a ciência à população em geral de forma acessível e atraente.\\n\\nSagan foi professor da Universidade de Cornell e foi membro da NASA como cientista consultor. Foi um dos principais defensores da ideia da vida extraterrestre e foi um dos primeiros a promover a ideia de que a Terra pode não ser o único planeta habitado.\\n\\nEle é também famoso por seu programa de televisão \"Cosmos: Uma Viagem Pessoal\", que foi ao ar em 1980 e foi um sucesso absoluto. O programa apresentava temas como a formação do universo, a evolução da vida e a busca por inteligência extraterrestre.\\n\\nSagan também foi um defensor da razão, da crítica ao fundamentalismo religioso e da importância da ciência para a compreensão do mundo. Ele foi um dos primeiros cientistas a alertar para o perigo do aquecimento global e da destruição da Terra.\\n\\nCarl Sagan foi um homem de grande eloquência e habilidade comunicativa, e sua obra continua a inspirar gerações de cientistas, filósofos e curiosos em geral.' additional_kwargs={} response_metadata={'token_usage': {'completion_tokens': 328, 'prompt_tokens': 39, 'total_tokens': 367, 'completion_time': 0.391698671, 'prompt_time': 0.005963134, 'queue_time': 0.14581822, 'total_time': 0.397661805}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_343314801a', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None} id='run--c4d50d8d-1e3d-41dc-9219-fcb99a169829-0' usage_metadata={'input_tokens': 39, 'output_tokens': 328, 'total_tokens': 367}\n"
+      "content='Carl Sagan foi um astrofísico, astrônomo, cosmologista e pesquisador estadunidense. Ele é mais conhecido por sua capacidade de comunicar complexos conceitos científicos de forma clara e acessível ao público em geral.\\n\\nSagan nasceu em 1934 em Brooklyn, Nova York, e morreu em 1996 em Seattle, Washington. Ele foi um professor da Universidade Cornell e foi um dos principais cientistas da NASA durante a década de 1960 e 1970.\\n\\nSagan é mais conhecido por sua participação no programa de televisão \"Cosmos: Uma Jornada pelo Tempo e o Espaço\", que foi transmitido pela CBS em 1980. O programa foi um sucesso global e ajudou a popularizar a astronomia e a astrofísica entre o público em geral.\\n\\nSagan também foi um defensor da busca por vida extraterrestre e foi um dos principais cientistas envolvidos na busca por vida em Marte. Ele também foi um crítico da política nuclear e ambiental e foi um dos líderes do movimento contra a construção de uma base militar em Alaska.\\n\\nAlém disso, Sagan foi um escritor prolífico e publicou vários livros sobre ciência, incluindo \"Intelligent Life in the Universe\" e \"The Demon-Haunted World\". Ele também foi um defensor da educação científica e do ensino de ciências nas escolas.\\n\\nSagan foi homenageado com vários prêmios e condecorações, incluindo o Prêmio Pulitzer, o Prêmio Nacional de Ciência e a Medalha de Ouro da Royal Astronomical Society. Ele é considerado um dos cientistas mais influentes e mais popular da história.' additional_kwargs={} response_metadata={'token_usage': {'completion_tokens': 384, 'prompt_tokens': 39, 'total_tokens': 423, 'completion_time': 0.482165823, 'prompt_time': 0.005705737, 'queue_time': 0.145256437, 'total_time': 0.48787156}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_343314801a', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None} id='run--b2cf917e-56ad-4c34-bd9d-1170f71540cf-0' usage_metadata={'input_tokens': 39, 'output_tokens': 384, 'total_tokens': 423}\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -131,15 +131,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Um homem incrível! Carl Sagan foi um astrónomo, astrofísico, cosmologista e escritor americano, nascido em 1934 e falecido em 1996. Ele é mais conhecido por ser um dos científicos mais populares e influentes da história, e por sua capacidade de transmitir a ciência à população em geral de forma acessível e atraente.\n",
+      "Carl Sagan foi um astrofísico, astrônomo, cosmologista e pesquisador estadunidense. Ele é mais conhecido por sua capacidade de comunicar complexos conceitos científicos de forma clara e acessível ao público em geral.\n",
       "\n",
-      "Sagan foi professor da Universidade de Cornell e foi membro da NASA como cientista consultor. Foi um dos principais defensores da ideia da vida extraterrestre e foi um dos primeiros a promover a ideia de que a Terra pode não ser o único planeta habitado.\n",
+      "Sagan nasceu em 1934 em Brooklyn, Nova York, e morreu em 1996 em Seattle, Washington. Ele foi um professor da Universidade Cornell e foi um dos principais cientistas da NASA durante a década de 1960 e 1970.\n",
       "\n",
-      "Ele é também famoso por seu programa de televisão \"Cosmos: Uma Viagem Pessoal\", que foi ao ar em 1980 e foi um sucesso absoluto. O programa apresentava temas como a formação do universo, a evolução da vida e a busca por inteligência extraterrestre.\n",
+      "Sagan é mais conhecido por sua participação no programa de televisão \"Cosmos: Uma Jornada pelo Tempo e o Espaço\", que foi transmitido pela CBS em 1980. O programa foi um sucesso global e ajudou a popularizar a astronomia e a astrofísica entre o público em geral.\n",
       "\n",
-      "Sagan também foi um defensor da razão, da crítica ao fundamentalismo religioso e da importância da ciência para a compreensão do mundo. Ele foi um dos primeiros cientistas a alertar para o perigo do aquecimento global e da destruição da Terra.\n",
+      "Sagan também foi um defensor da busca por vida extraterrestre e foi um dos principais cientistas envolvidos na busca por vida em Marte. Ele também foi um crítico da política nuclear e ambiental e foi um dos líderes do movimento contra a construção de uma base militar em Alaska.\n",
       "\n",
-      "Carl Sagan foi um homem de grande eloquência e habilidade comunicativa, e sua obra continua a inspirar gerações de cientistas, filósofos e curiosos em geral.\n"
+      "Além disso, Sagan foi um escritor prolífico e publicou vários livros sobre ciência, incluindo \"Intelligent Life in the Universe\" e \"The Demon-Haunted World\". Ele também foi um defensor da educação científica e do ensino de ciências nas escolas.\n",
+      "\n",
+      "Sagan foi homenageado com vários prêmios e condecorações, incluindo o Prêmio Pulitzer, o Prêmio Nacional de Ciência e a Medalha de Ouro da Royal Astronomical Society. Ele é considerado um dos cientistas mais influentes e mais popular da história.\n"
      ]
     }
    ],
