feat: Add file 03-Template new

--- a/03-Templates.ipynb
+++ b/03-Templates.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "id": "eCBl659lZl7j"
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "id": "zCezS4xvZl_C"
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "id": "z_YBQfANZmCi"
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -174,6 +174,81 @@
     "    analises=analises_text\n",
     ")\n",
     "print(\"Prompt Gerado:\\n\", prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saída do LLM:\n",
+      " **Relatório Financeiro da ACME Corp - Q1 2024**\n",
+      "\n",
+      "**Análise do Balanço Patrimonial**\n",
+      "\n",
+      "O balanço patrimonial da ACME Corp para o período Q1 2024 apresenta um quadro financeiro saudável. As principais características são:\n",
+      "\n",
+      "* Ativos: A empresa apresenta ativos totais de US$ 10,5 milhões, composta por US$ 3,5 milhões em ativos circulantes (caixa e equivalentes) e US$ 7 milhões em ativos não circulantes (investimentos e propriedade intelectual).\n",
+      "* Patrimônio Líquido: O patrimônio líquido da empresa é de US$ 5,2 milhões, o que representa um aumento de 15% em relação ao período Q1 2023.\n",
+      "* Dívida: A empresa tem uma dívida total de US$ 2,3 milhões, composta por US$ 1,5 milhão em dívida por prazo curto (mais de 90 dias) e US$ 0,8 milhão em dívida por prazo longo.\n",
+      "\n",
+      "**Conclusão:** O balanço patrimonial da ACME Corp apresenta uma estrutura financeira robusta, com um patrimônio líquido crescente e uma dívida controlada.\n",
+      "\n",
+      "**Análise do Fluxo de Caixa**\n",
+      "\n",
+      "O fluxo de caixa da ACME Corp para o período Q1 2024 é o seguinte:\n",
+      "\n",
+      "* Fluxo de Caixa Operacional: US$ 2,2 milhões, resultado de uma melhoria de 12% em relação ao período Q1 2023.\n",
+      "* Investimentos: US$ 1,5 milhão, destinados à expansão da capacidade de produção e à aquisição de novas tecnologias.\n",
+      "* Financiamento: US$ 0,5 milhão, resultado de uma emissão de títulos para refinanciar dívida e financiar investimentos.\n",
+      "* Caixa e Equivalentes: US$ 1,2 milhão, resultado de um aumento de 10% em relação ao período Q1 2023.\n",
+      "\n",
+      "**Conclusão:** O fluxo de caixa da ACME Corp apresenta uma melhoria em relação ao período anterior, resultado de uma melhor gestão de fluxos e investimentos.\n",
+      "\n",
+      "**Análise de Tendências**\n",
+      "\n",
+      "A análise de tendências para o período Q1 2024 apresenta uma evolução positiva para a ACME Corp:\n",
+      "\n",
+      "* Receita: A receita líquida da empresa apresentou um crescimento de 8% em relação ao período Q1 2023, resultado de uma expansão de mercado e de uma melhor gestão de preços.\n",
+      "* Custos: Os custos da empresa apresentaram um crescimento de 5% em relação ao período Q1 2023, resultado de uma melhoria de eficiência operacional e de uma redução de custos.\n",
+      "* Margem de Lucro: A margem de lucro da empresa apresentou um crescimento de 10% em relação ao período Q1 2023, resultado de uma melhor gestão de receita e de custos.\n",
+      "\n",
+      "**Conclusão:** A análise de tendências para o período Q1 2024 apresenta uma evolução positiva para a ACME Corp, resultado de uma melhor gestão de receita e custos e de uma expansão de mercado.\n",
+      "\n",
+      "**Análise de Receita e Lucro**\n",
+      "\n",
+      "A análise de receita e lucro da ACME Corp para o período Q1 2024 é a seguinte:\n",
+      "\n",
+      "* Receita Líquida: US$ 5,8 milhões, resultado de um crescimento de 8% em relação ao período Q1 2023.\n",
+      "* Lucro Líquido: US$ 1,2 milhão, resultado de um crescimento de 15% em relação ao período Q1 2023.\n",
+      "* Margem de Lucro: 20,7%, resultado de uma melhor gestão de receita e custos.\n",
+      "\n",
+      "**Conclusão:** A análise de receita e lucro da ACME Corp apresenta um crescimento positivo, resultado de uma melhor gestão de receita e custos e de uma expansão de mercado.\n",
+      "\n",
+      "**Análise de Posição de Mercado**\n",
+      "\n",
+      "A análise de posição de mercado da ACME Corp para o período Q1 2024 é a seguinte:\n",
+      "\n",
+      "* Posição de Mercado: A empresa mantém sua posição de líder no mercado, com uma participação de 35% no segmento de produtos.\n",
+      "* Competição: A competição no mercado é intensa, com várias empresas oferecendo produtos similares.\n",
+      "* Estratégia: A ACME Corp está focada em expansão de mercado e na melhoria de sua oferta de produtos e serviços.\n",
+      "\n",
+      "**Conclusão:** A análise de posição de mercado da ACME Corp apresenta uma situação competitiva, com a empresa mantendo sua posição de líder no mercado e focada em expansão e melhoria de sua oferta.\n",
+      "\n",
+      "**Resumo**\n",
+      "\n",
+      "O relatório financeiro da ACME Corp para o período Q1 2024 apresenta uma evolução positiva, com um crescimento de receita e lucro, uma melhoria de fluxo de caixa e uma estrutura financeira robusta. A empresa está bem posicionada no mercado e está focada em expansão e melhoria de sua oferta.\n"
+     ]
+    }
+   ],
+   "source": [
+    "groq = ChatGroq(model_name='llama3-8b-8192')\n",
+    "response = groq.invoke(prompt)\n",
+    "print(\"Saída do LLM:\\n\", response.content)"
    ]
   },
   {
