refactor: change model_name

--- a/01-LangchainBasico.ipynb
+++ b/01-LangchainBasico.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -74,7 +74,7 @@
     }
    ],
    "source": [
-    "groq = ChatGroq(model_name='llama3-8b-8192')\n",
+    "groq = ChatGroq(model_name='llama-3.3-70b-versatile')\n",
     "frequency_penalty=1\n",
     "presence_penalty = 1\n",
     "temperature =  1\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "groq = ChatGroq(model_name='llama3-8b-8192')\n",
+    "groq = ChatGroq(model_name='llama-3.3-70b-versatile')\n",
     "messages = [\n",
     "    {\"role\": \"system\", \"content\": \"Você é um assistente que fornece informações sobre figuras históricas.\"},\n",
     "    {\"role\": \"user\", \"content\": \"Quem foi Carl Sagan?\"}\n",
