--- a/04-Simple.ipynb
+++ b/04-Simple.ipynb
@@ -1,118 +1,118 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "editable": true,
+        "slideshow": {
+          "slide_type": ""
+        },
+        "tags": []
+      },
+      "source": [
+        "# Setup"
+      ]
     },
-    "tags": []
-   },
-   "source": [
-    "# Setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "id": "vOISp5PYq4qi",
-    "slideshow": {
-     "slide_type": ""
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "editable": true,
+        "id": "vOISp5PYq4qi",
+        "slideshow": {
+          "slide_type": ""
+        },
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "from langchain_groq import ChatGroq\n",
+        "from langchain.prompts import PromptTemplate\n"
+      ]
     },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from langchain_groq import ChatGroq\n",
-    "from langchain.prompts import PromptTemplate\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dotenv import find_dotenv, load_dotenv\n",
-    "\n",
-    "load_dotenv(find_dotenv())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "groq = ChatGroq(model_name='llama3-8b-8192',temperature=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Simple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from dotenv import find_dotenv, load_dotenv\n",
+        "\n",
+        "load_dotenv(find_dotenv())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "groq = ChatGroq(model_name='llama-3.3-70b-versatile',temperature=0)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Simple"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "959301hQh_yi",
+        "outputId": "5401a17d-f579-4ae0-b9c4-0994b05cfe7a"
+      },
+      "outputs": [],
+      "source": [
+        "prompt_template = PromptTemplate.from_template(\"Descreva as tendências tecnológicas em {ano}.\")\n",
+        "runnable_sequence = prompt_template | groq\n",
+        "output = runnable_sequence.invoke({\"ano\": \"2024\"})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(\"Output:\\n\", output)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    }
+  ],
+  "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/"
+      "provenance": []
     },
-    "id": "959301hQh_yi",
-    "outputId": "5401a17d-f579-4ae0-b9c4-0994b05cfe7a"
-   },
-   "outputs": [],
-   "source": [
-    "prompt_template = PromptTemplate.from_template(\"Descreva as tendências tecnológicas em {ano}.\")\n",
-    "runnable_sequence = prompt_template | groq\n",
-    "output = runnable_sequence.invoke({\"ano\": \"2024\"})"
-   ]
+    "kernelspec": {
+      "display_name": "langchain",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.5"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Output:\\n\", output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "colab": {
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "langchain",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.5"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "nbformat": 4,
+  "nbformat_minor": 4
 }
